Fix kind of blurry text in workout comment section

--- a/src/Components/RoutineDisplay/RoutineDisplay.scss
+++ b/src/Components/RoutineDisplay/RoutineDisplay.scss
@@ -12,8 +12,6 @@
   background-color: $dark-200;
   border-radius: 0.5rem;
   overflow: hidden;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
 
   &:has(.workout-display-comment-section) .routine-display {
     overflow-y: hidden;
