--- a/src/Components/RoutineDisplay/RoutineDisplayCommentPopup/WorkoutCommentSection.scss
+++ b/src/Components/RoutineDisplay/RoutineDisplayCommentPopup/WorkoutCommentSection.scss
@@ -10,8 +10,6 @@
   justify-content: center;
   align-items: center;
   background-color: $dark-300;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
   
   display: flex;
   flex-direction: column;
