--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@
   padding: 0;
   box-sizing: border-box;
   transition: filter 0.4s;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
